Minor refactorings and formattings
Signed-off-by: Hendrik Vennekate <Hendrik.Vennekate@tngtech.com>