@@ -1,7 +1,6 @@
 package com.tngtech.jgiven.report.asciidoc;
 
 import com.tngtech.jgiven.report.ReportBlockConverter;
-import com.tngtech.jgiven.report.model.CasesTable;
 import com.tngtech.jgiven.report.model.CasesTableCalculator;
 import com.tngtech.jgiven.report.model.ExecutionStatus;
 import com.tngtech.jgiven.report.model.ReportModel;
@@ -17,7 +16,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 class AsciiDocReportModelVisitor extends ReportModelVisitor {
 
@@ -46,11 +44,11 @@ class AsciiDocReportModelVisitor extends ReportModelVisitor {
 
     @Override
     public void visit(final ReportModel reportModel) {
-        String featureName = Optional.ofNullable(reportModel.getName())
+        var featureName = Optional.ofNullable(reportModel.getName())
                 .filter(name -> !name.isEmpty())
                 .orElse(reportModel.getClassName());
 
-        String featureHeader =
+        var featureHeader =
                 blockConverter.convertFeatureHeaderBlock(featureName, featureStatistics, reportModel.getDescription());
         asciiDocBlocks.add(featureHeader);
 
@@ -63,9 +61,9 @@ class AsciiDocReportModelVisitor extends ReportModelVisitor {
 
         tagList = scenarioModel.getTagIds().stream()
                 .map(this.featureTagMap::get)
-                .collect(Collectors.toList());
+                .toList();
 
-        String scenarioHeader = blockConverter.convertScenarioHeaderBlock(scenarioModel.getTestMethodName(),
+        var scenarioHeader = blockConverter.convertScenarioHeaderBlock(scenarioModel.getTestMethodName(),
                 scenarioModel.getDescription(), scenarioModel.getExecutionStatus(), scenarioModel.getDurationInNanos(),
                 tagList, scenarioModel.getExtendedDescription());
         asciiDocBlocks.add(scenarioHeader);
@@ -82,7 +80,7 @@ class AsciiDocReportModelVisitor extends ReportModelVisitor {
         }
 
         if (scenarioHasMultipleCases && !scenarioHasDataTable) {
-            String caseHeader = blockConverter.convertCaseHeaderBlock(scenarioCase.getCaseNr(),
+            var caseHeader = blockConverter.convertCaseHeaderBlock(scenarioCase.getCaseNr(),
                     scenarioCase.getExecutionStatus(), scenarioCase.getDurationInNanos(),
                     scenarioCase.getDescription());
             asciiDocBlocks.add(caseHeader);
@@ -123,7 +121,7 @@ class AsciiDocReportModelVisitor extends ReportModelVisitor {
 
     @Override
     public void visitEnd(final ScenarioCaseModel scenarioCase) {
-        final String errorMessage = scenarioCase.getErrorMessage();
+        final var errorMessage = scenarioCase.getErrorMessage();
         if (!scenarioHasDataTable && errorMessage != null) {
             asciiDocBlocks.add(blockConverter.convertCaseFooterBlock(errorMessage, scenarioCase.getStackTrace()));
         }
@@ -132,12 +130,12 @@ class AsciiDocReportModelVisitor extends ReportModelVisitor {
     @Override
     public void visitEnd(final ScenarioModel scenarioModel) {
         if (scenarioHasDataTable) {
-            final CasesTable casesTable = tableCalculator.collectCases(scenarioModel);
-            final String casesTableBlock = blockConverter.convertCasesTableBlock(casesTable);
+            final var casesTable = tableCalculator.collectCases(scenarioModel);
+            final var casesTableBlock = blockConverter.convertCasesTableBlock(casesTable);
             asciiDocBlocks.add(casesTableBlock);
         }
 
-        String scenarioFooter = blockConverter.convertScenarioFooterBlock(
+        var scenarioFooter = blockConverter.convertScenarioFooterBlock(
                 scenarioModel.getTestMethodName(), scenarioModel.getExecutionStatus(), tagList);
         asciiDocBlocks.add(scenarioFooter);
     }
